# agent-deploy

./: README.md
agent-deploy/: README.md  WALKTHROUGH.md  pyproject.toml
agent-deploy/agent_deploy/: __init__.py
agent-deploy/agent_deploy/adapters/: crewai_adapter.py  custom_adapter.py  factory.py  langgraph_adapter.py  openai_adapter.py  protocol.py
agent-deploy/agent_deploy/cli/: main.py
agent-deploy/agent_deploy/config/: loader.py  schema.py
agent-deploy/agent_deploy/deploy/targets/: k8s.py
agent-deploy/agent_deploy/detect/: scanner.py
agent-deploy/agent_deploy/package/: dockerfile_template.py
agent-deploy/agent_deploy/server/: app.py  entrypoint.py
agent-deploy/agent_deploy/server/middleware/: auth.py  cost_guard.py
agent-deploy/agent_deploy/server/routes/: health.py  invoke.py  metadata.py  stream.py
agent-deploy/agent_deploy/telemetry/: logging.py
agent-deploy/agent_deploy/utils/: loader.py
agent-deploy/examples/: math_agent.py
agent-deploy/tests/: test_basic_flow.py  test_scanner.py
